--- a/src/components/product/Main.module.scss
+++ b/src/components/product/Main.module.scss
@@ -61,7 +61,8 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
 
-        padding: 10px;
+        gap: 15px;
+        padding-top: 10px;
 
         a {
           text-decoration: none;
@@ -80,6 +81,24 @@
       grid-area: main2;
 
       @include item(100%, 100%);
+
+      display: flex;
+      justify-content: space-evenly;
+
+      .category {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        gap: 20px;
+        
+        img {
+          border-radius: 12px;
+          border: none;
+          background-color: black;
+        }
+      }
     }
 
     .main3 {
@@ -129,19 +148,19 @@
           display: flex;
           justify-content: flex-start;
           align-items: center;
+          gap: 15px;
+          
         
           background-color: #eee;
 
           img {
-            width: 180px;
+            width: 150px;
             height: 120px;
+            
+            object-fit: cover;
             
             border-radius: 8px;
           }
-        }
-
-        .nikeContent {
-          
         }
       }
     }
