--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -12,11 +12,6 @@
   justify-content: space-evenly;
   align-items: center;
 
-  .active {
-    color: #fff;
-    border-bottom: 3px solid #fff;
-  }
-
   ul {
     list-style: none;
     display: flex;
@@ -25,6 +20,14 @@
     li {
       margin: 0 15px;
 
+      &.active {
+        border-bottom: 3px solid #fff;
+
+        .link {
+          color: #fff;
+        }
+      }
+      
       .link {
         color: #666;
         text-decoration: none;
@@ -34,13 +37,8 @@
         transition: background-color 0.3s color 0.3s;
         border-radius: 4px;
 
-        &.active {
-          color: #fff;
-          border-bottom: 3px solid #fff;
-        }
-
+        
         &:hover {
-          // background-color: #575757;
           color: #fff;
         }
       }  
