--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -5,7 +5,10 @@
 }
 
 .container {
-  background-color: #000;
+
+  margin-top: 20px;
+
+  background-color: #e4e4e4;
   color: #999999;
   font-size: 12px;
   display: flex;
