--- a/src/components/product/Main.module.scss
+++ b/src/components/product/Main.module.scss
@@ -78,9 +78,10 @@
         gap: 15px;
         padding-top: 10px;
 
+
         a {
           text-decoration: none;
-          color: #333;
+          color: #777;
         }
         
         h4 {
@@ -167,7 +168,7 @@
 
         a {
           text-decoration: none;
-          color: #333;
+          color: #777;
         }
         
         .nikeItem {
@@ -179,7 +180,7 @@
           gap: 15px;
           
         
-          background-color: #eee;
+          background-color: white;
 
           img {
             width: 150px;
