--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -1,3 +1,36 @@
+@mixin category() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 20px;
+  
+  margin: 16px 0;
+
+  .category {
+
+    h4{
+      text-align: center;
+      color: #777;
+    }
+
+    .image{
+      width: 42px;
+      height: 42px;
+
+      border-radius: 12px;
+      background-color: white;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    
+  }
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,6 +38,8 @@
 }
 
 .container {
+  width: 1280px;
+  margin: 0 auto;
 
   margin-top: 20px;
 
@@ -12,39 +47,58 @@
   color: #999999;
   font-size: 12px;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 
-  ul {
-    list-style: none;
+  .navigation {
+    width: 100%;
+
     display: flex;
-    padding: 10px 20px;
+    justify-content: space-around;
+    align-items: center;
 
-    li {
-      margin: 0 15px;
+    margin-bottom: 10px;
 
-      &.active {
-        border-bottom: 3px solid #fff;
-
-        .link {
-          color: #fff;
+    ul {
+      list-style: none;
+      display: flex;
+      padding: 10px 20px;
+  
+      li {
+        margin: 0 15px;
+  
+        &.active {
+          border-bottom: 3px solid #fff;
+  
+          .link {
+            color: #fff;
+          }
         }
-      }
-      
-      .link {
-        color: #666;
-        text-decoration: none;
-        font-size: 20px;
-        font-weight: 700;
-        padding: 10px 15px;
-        transition: background-color 0.3s color 0.3s;
-        border-radius: 4px;
-
         
-        &:hover {
-          color: #fff;
-        }
-      }  
+        .link {
+          color: #666;
+          text-decoration: none;
+          font-size: 20px;
+          font-weight: 700;
+          padding: 10px 15px;
+          transition: background-color 0.3s color 0.3s;
+          border-radius: 4px;
+  
+          
+          &:hover {
+            color: #fff;
+          }
+        }  
+      }
     }
   }
+
+  .container_category{
+    width: 100%;
+
+    @include category();
+  }
+
+  
 }
