--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -89,7 +89,7 @@ $transition-duration: 0.3s; // 애니메이션 지속 시간
 
     h4{
       text-align: center;
-      color: #777;
+      color: $text-color;
     }
 
     .image{
@@ -122,7 +122,7 @@ $transition-duration: 0.3s; // 애니메이션 지속 시간
   margin-top: 20px;
 
   background-color: #e4e4e4;
-  color: #999999;
+  color: $text-color;
   font-size: 12px;
   display: flex;
   flex-direction: column;
@@ -142,6 +142,7 @@ $transition-duration: 0.3s; // 애니메이션 지속 시간
       list-style: none;
       display: flex;
       padding: 10px 20px;
+      font-weight: 600;
   
       li {
         margin: 0 15px;
@@ -155,7 +156,7 @@ $transition-duration: 0.3s; // 애니메이션 지속 시간
         }
         
         .link {
-          color: #666;
+          color: $text-color;
           text-decoration: none;
           font-size: 20px;
           font-weight: 700;
